--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
                         <p>
                            Koteshwor <br>
                            Kathmandu, Nepal<br><br>
-                           <strong>Phone:</strong> +1 5589 55488 55<br>
-                           <strong>Email:</strong> info@example.com<br>
+                           <strong>Phone:</strong>9849982127<br>
+                           <strong>Email:</strong> nepzonevibe@gmail.com <br>
                         </p>
                      </div>
                   </div>
