--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <header id="header" class="header fixed-top" data-scrollto-offset="0">
          <div class="container-fluid d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
-               <img src="/img/napzone logo.png" alt="">
+               <img src="./img/napzone logo.png" alt="">
                <!-- <h1>Nepzone Vibe<span>.</span></h1> -->
             </a>
             <nav id="navbar" class="navbar">
