--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <meta content="" name="description">
       <meta content="" name="keywords">
       <!-- Favicons -->
-      <link href="/img/napzone logo.png" rel="icon">
-      <link href="/img/napzone logo.png" rel="apple-touch-icon">
+      <link href="./img/napzone logo.png" rel="icon">
+      <link href="./img/napzone logo.png" rel="apple-touch-icon">
       <!-- Google Fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
