--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
                   <div class="col-lg-5">
                      <div class="about-img">
-                        <img src="/img/about.jpg" class="img-fluid" alt="">
+                        <img src="./img/about.jpg" class="img-fluid" alt="">
                      </div>
                   </div>
                   <div class="col-lg-7">
