--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <meta content="" name="description">
       <meta content="" name="keywords">
       <!-- Favicons -->
-      <link href="./img/napzone logo.png" rel="icon">
-      <link href="./img/napzone logo.png" rel="apple-touch-icon">
+      <link href="./assets/img/napzone logo.png" rel="icon">
+      <link href="./assets/img/napzone logo.png" rel="apple-touch-icon">
       <!-- Google Fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
       <header id="header" class="header fixed-top" data-scrollto-offset="0">
          <div class="container-fluid d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
-               <img src="./img/napzone logo.png" alt="">
+               <img src="./assets/img/napzone logo.png" alt="">
                <!-- <h1>Nepzone Vibe<span>.</span></h1> -->
             </a>
             <nav id="navbar" class="navbar">
@@ -47,7 +47,7 @@
       <!-- End Header -->
       <section id="hero-animated" class="hero-animated d-flex align-items-center">
          <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
-            <img src="/img/napzone logo.png" class="img-fluid animated">
+            <img src="assets/img/napzone logo.png" class="img-fluid animated">
             <h2>Welcome to <span>Nepzone Vibe</span></h2>
             <p> If you want to upload your music video, music or original cover please kindly mail us: nepzonevibe@gmail.com  </p>
             <div class="d-flex">
@@ -66,7 +66,7 @@
                <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
                   <div class="col-lg-5">
                      <div class="about-img">
-                        <img src="./img/about.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/about.jpg" class="img-fluid" alt="">
                      </div>
                   </div>
                   <div class="col-lg-7">
@@ -174,7 +174,7 @@
                            </p>
                         </div>
                         <div class="col-lg-4 order-1 order-lg-2 text-center" data-aos="fade-up" data-aos-delay="200">
-                           <img src="/img/f1.png" alt="" class="img-fluid">
+                           <img src="assets/img/f1.png" alt="" class="img-fluid">
                         </div>
                      </div>
                   </div>
@@ -196,7 +196,7 @@
                            </p>
                         </div>
                         <div class="col-lg-4 order-1 order-lg-2 text-center">
-                           <img src="/img/f2.png" alt="" class="img-fluid">
+                           <img src="assets/img/f2.png" alt="" class="img-fluid">
                         </div>
                      </div>
                   </div>
@@ -240,7 +240,7 @@
                   <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                      <div class="service-item">
                         <div class="img">
-                           <img src="/img/s1.png" class="img-fluid" alt="">
+                           <img src="assets/img/s1.png" class="img-fluid" alt="">
                         </div>
                         <div class="details position-relative">
                            <div class="icon">
@@ -257,7 +257,7 @@
                   <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                      <div class="service-item">
                         <div class="img">
-                           <img src="/img/s2.png" class="img-fluid" alt="">
+                           <img src="assets/img/s2.png" class="img-fluid" alt="">
                         </div>
                         <div class="details position-relative">
                            <div class="icon">
@@ -274,7 +274,7 @@
                   <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
                      <div class="service-item">
                         <div class="img">
-                           <img src="/img/s3.png" class="img-fluid" alt="">
+                           <img src="assets/img/s3.png" class="img-fluid" alt="">
                         </div>
                         <div class="details position-relative">
                            <div class="icon">
@@ -311,7 +311,7 @@
                   <!-- End Portfolio Filters -->
                   <div class="row g-0 portfolio-container">
                      <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="/img/f1.png" class="img-fluid" alt="">
+                        <img src="assets/img/f1.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
                            <a href="https://youtu.be/dtQkLuPRhpg" title="" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                            <a href="https://youtu.be/dtQkLuPRhpg" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -319,7 +319,7 @@
                      </div>
                      <!-- End Portfolio Item -->
                      <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
-                        <img src="/img/f3.png" class="img-fluid" alt="">
+                        <img src="assets/img/f3.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
                            <a href="https://youtu.be/dtQkLuPRhpg" title="" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                            <a href="https://youtu.be/dtQkLuPRhpg" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -327,15 +327,15 @@
                      </div>
                      <!-- End Portfolio Item -->
                      <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
-                        <img src="/img/f2.png" class="img-fluid" alt="">
+                        <img src="assets/img/f2.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                           <a href="/img/s2.png" title="" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                           <a href="assets/img/s2.png" title="" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                            <a href="https://youtu.be/dtQkLuPRhpg" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                         </div>
                      </div>
                      <!-- End Portfolio Item -->
                      <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
-                        <img src="/img/s1.png" class="img-fluid" alt="">
+                        <img src="assets/img/s1.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
                            <a href="" title="" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                            <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -343,7 +343,7 @@
                      </div>
                      <!-- End Portfolio Item -->
                      <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="/img/s3.png" class="img-fluid" alt="">
+                        <img src="assets/img/s3.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
                            <a href="https://youtu.be/dtQkLuPRhpg" title="" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                            <a href="https://youtu.be/dtQkLuPRhpg" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
