--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!-- End Header -->
       <section id="hero-animated" class="hero-animated d-flex align-items-center">
          <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
-            <img src="assets/img/napzone logo.png" class="img-fluid animated">
+            <img src="./assets/img/napzone logo.png" class="img-fluid animated">
             <h2>Welcome to <span>Nepzone Vibe</span></h2>
             <p> If you want to upload your music video, music or original cover please kindly mail us: nepzonevibe@gmail.com  </p>
             <div class="d-flex">
@@ -240,7 +240,7 @@
                   <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                      <div class="service-item">
                         <div class="img">
-                           <img src="assets/img/s1.png" class="img-fluid" alt="">
+                           <img src="/assets/img/s1.png" class="img-fluid" alt="">
                         </div>
                         <div class="details position-relative">
                            <div class="icon">
@@ -257,7 +257,7 @@
                   <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                      <div class="service-item">
                         <div class="img">
-                           <img src="assets/img/s2.png" class="img-fluid" alt="">
+                           <img src="/assets/img/s2.png" class="img-fluid" alt="">
                         </div>
                         <div class="details position-relative">
                            <div class="icon">
@@ -274,7 +274,7 @@
                   <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
                      <div class="service-item">
                         <div class="img">
-                           <img src="assets/img/s3.png" class="img-fluid" alt="">
+                           <img src="/assets/img/s3.png" class="img-fluid" alt="">
                         </div>
                         <div class="details position-relative">
                            <div class="icon">
