--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                      <div class="service-item">
                         <div class="img">
-                           <img src="./assets/img/s1.png" class="img-fluid" alt="">
+                           <img src="assets/img/s1.png" class="img-fluid" alt="">
                         </div>
                         <div class="details position-relative">
                            <div class="icon">
@@ -257,7 +257,7 @@
                   <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                      <div class="service-item">
                         <div class="img">
-                           <img src="./assets/img/s2.png" class="img-fluid" alt="">
+                           <img src="assets/img/s2.png" class="img-fluid" alt="">
                         </div>
                         <div class="details position-relative">
                            <div class="icon">
@@ -274,7 +274,7 @@
                   <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
                      <div class="service-item">
                         <div class="img">
-                           <img src="./assets/img/s3.png" class="img-fluid" alt="">
+                           <img src="assets/img/s3.png" class="img-fluid" alt="">
                         </div>
                         <div class="details position-relative">
                            <div class="icon">
